--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -76,6 +76,9 @@
     h1 {
       @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
     }
+    h4 {
+      @apply scroll-m-20 text-xl font-semibold tracking-tight
+    }
     p {
       @apply leading-7 [&:not(:first-child)]:mt-6;
     }
